Code cleanup and fix UI on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+@media screen and (max-width: 400px){
+  .big-title {
+    font-size: 1rem;
+  }
+}
 /* .App {
   text-align: center;
 }
